--- a/app/src/main/res/layout/activity_orderdetail.xml
+++ b/app/src/main/res/layout/activity_orderdetail.xml
@@ -66,12 +66,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/ll_bottom"
+        android:background="@color/common_bg"
         android:layout_below="@+id/titlebar">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -117,6 +119,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/grey_333333"
+                            android:text="@{orderdetailbean.orderStatusSay}"
                             android:textSize="13sp" />
 
                     </LinearLayout>
@@ -329,6 +332,12 @@
 
 
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/margin_10"
+                android:background="@color/common_bg"/>
+
         </LinearLayout>
     </ScrollView>
 
@@ -336,7 +345,6 @@
         android:id="@+id/ll_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_10"
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
 
