--- a/app/src/main/res/layout/adapter_item_home.xml
+++ b/app/src/main/res/layout/adapter_item_home.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="griditem"
-            type="com.lzyyd.hsq.bean.HomeGridItemBean" />
+            type="com.lzyyd.hsq.bean.HomeGridListItemBean" />
 
     </data>
 
