--- a/app/src/main/res/layout/activity_goodslist.xml
+++ b/app/src/main/res/layout/activity_goodslist.xml
@@ -22,9 +22,48 @@
 
 
     <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:orientation="horizontal"
+        android:background="@color/white"
+        >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:onClick="@{()->goodslist.onBackPressed()}"
+            android:paddingLeft="16dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_back"
+                android:textColor="@color/black"
+                android:typeface="@{goodslist.setTypeFace()}"
+                />
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textColor="@color/text_commom"
+            android:textSize="18sp"
+            android:text="自营商城"/>
+
+
+    </RelativeLayout>
+
+
+
+    <RelativeLayout
         android:id="@+id/rl_search_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         >
 
     <LinearLayout
