--- a/app/src/main/res/layout/activity_vip.xml
+++ b/app/src/main/res/layout/activity_vip.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -92,6 +93,61 @@
             android:scaleType="fitXY"
             android:background="#1C1714"
             />
+        
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="31dp"
+            android:layout_marginTop="@dimen/margin_10"
+            >
+            
+            <com.lzyyd.hsq.ui.RoundImageView
+                android:id="@+id/riv_vip"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:scaleType="fitXY"
+                />
+
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical"
+                android:src="@mipmap/ic_vip"
+                android:layout_marginLeft="@dimen/margin_5"
+                />
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                >
+            
+            <ImageView
+                android:id="@+id/ic_vip_circle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_vip_circle"
+                />
+
+            <TextView
+                android:id="@+id/vip_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_vip_circle"
+                android:layout_toRightOf="@+id/ic_vip_circle"
+                android:layout_marginLeft="-1dp"
+                android:textSize="@dimen/textsize10"
+                android:paddingRight="@dimen/padding_5"
+                android:textColor="#E94240"
+                />
+            </RelativeLayout>
+            
+            
+        </LinearLayout>
+        
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -145,6 +201,7 @@
                     />
 
                 <TextView
+                    android:id="@+id/tv_chuangke"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_update_vip"
@@ -177,6 +234,7 @@
 
 
                     <TextView
+                        android:id="@+id/tv_center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/bg_update_vip"
@@ -208,6 +266,7 @@
 
 
                     <TextView
+                        android:id="@+id/tv_vip"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/bg_update_vip"
