--- a/app/src/main/res/layout/adapter_chuangke.xml
+++ b/app/src/main/res/layout/adapter_chuangke.xml
@@ -89,17 +89,34 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true">
 
-                <TextView
-                    android:id="@+id/goods_price"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
+                    android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/goods_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:lines="1"
                     android:text='@{"¥" + goodslist.price}'
                     android:textColor="@color/setting_title_color"
                     android:textSize="16.5sp"
                     android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_macketprice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text='@{String.valueOf(goodslist.marketPrice)}'
+                        android:layout_marginLeft="@dimen/margin_10"
+                        android:textColor="#9A9A9A"
+                        android:textSize="@dimen/textsize11"
+                        />
+
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
