--- a/app/src/main/res/layout/adapter_store_cart.xml
+++ b/app/src/main/res/layout/adapter_store_cart.xml
@@ -45,10 +45,11 @@
                 android:layout_width="25dp"
                 android:layout_height="25dp" />
 
-            <ImageView
+            <com.lzyyd.hsq.ui.RoundImageView
+                android:id="@+id/riv_cart"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_marginLeft="@dimen/margin_15"
+                android:layout_marginLeft="@dimen/padding_5"
                 />
 
 
