--- a/app/src/main/res/layout/order_child_item.xml
+++ b/app/src/main/res/layout/order_child_item.xml
@@ -30,14 +30,15 @@
         android:layout_height="0.5dp"
         android:background="@color/line_bg"/>
 
-    <ImageView
+    <com.lzyyd.hsq.ui.CustomRoundAngleImageView
         android:id="@+id/iv_goods_pic"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:scaleType="fitXY"
         hsq:image="@{ordergoodsbuylistbean.goodsImg}"
         android:layout_marginLeft="@dimen/margin_10"
-        android:layout_marginTop="@dimen/margin_10"/>
+        android:layout_marginTop="@dimen/margin_10"
+        hsq:radius="5dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
