--- a/app/src/main/res/layout/popup_goods_format.xml
+++ b/app/src/main/res/layout/popup_goods_format.xml
@@ -40,7 +40,6 @@
                         android:id="@+id/tv_goods_pop_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="¥ 61.4"
                         android:textColor="@color/red_e61d15" />
 
                     <LinearLayout
@@ -235,7 +234,7 @@
                     android:text="购买数量" />
 
                 <LinearLayout
-                    android:layout_width="120dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="35dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
@@ -245,9 +244,8 @@
 
                     <TextView
                         android:id="@+id/iv_goods_subtraction"
-                        android:layout_width="0dp"
+                        android:layout_width="40dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
                         android:textSize="18sp"
@@ -263,15 +261,14 @@
 
                     <TextView
                         android:id="@+id/tv_goods_count"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
                         android:text="1"
                         android:gravity="center"
                         android:textColor="@color/text_222222"
-                        android:textSize="18sp" />
+                        android:textSize="16sp" />
 
                     <View
                         android:layout_width="1dp"
@@ -281,9 +278,8 @@
 
                     <TextView
                         android:id="@+id/iv_goods_plus"
-                        android:layout_width="0dp"
+                        android:layout_width="40dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
                         android:gravity="center"
