--- a/app/src/main/res/layout/adapter_store_cart.xml
+++ b/app/src/main/res/layout/adapter_store_cart.xml
@@ -45,6 +45,15 @@
                 android:layout_width="25dp"
                 android:layout_height="25dp" />
 
+            <LinearLayout
+                android:id="@+id/ll_store"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                >
+
+
             <com.lzyyd.hsq.ui.RoundImageView
                 android:id="@+id/riv_cart"
                 android:layout_width="20dp"
@@ -63,7 +72,7 @@
                 android:layout_marginLeft="@dimen/margin_8"
                 />
 
-
+            </LinearLayout>
 
 
         </LinearLayout>
