--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -31,7 +31,6 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:gravity="center"
-            android:visibility="gone"
             android:onClick="@{()->searchviewmodel.finish()}"
             android:layout_marginTop="@dimen/margin_10"
             android:layout_marginLeft="@dimen/margin_15"
@@ -41,7 +40,7 @@
                 android:id="@+id/iv_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_back_white"
+                android:src="@mipmap/ic_back"
                 />
         </LinearLayout>
 
