--- a/app/src/main/res/layout/activity_tianfeng.xml
+++ b/app/src/main/res/layout/activity_tianfeng.xml
@@ -51,7 +51,7 @@
                 android:layout_centerInParent="true"
                 android:textColor="@color/text_commom"
                 android:textSize="18sp"
-                android:text="电子币转出"/>
+                android:text="电子币转入"/>
 
 
         </RelativeLayout>
@@ -90,6 +90,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1.3"
                     android:text="@{ele_name}"
+                    android:gravity="right"
                     android:textColor="#ff333333"
                     android:textSize="16sp"
                     />
@@ -129,7 +130,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1.3"
                     android:text="@{tianfeng.amountPoint}"
-                    android:textColor="#ff333333"
+                    android:textColor="@color/red_e61e16"
+                    android:gravity="right"
                     android:textSize="16sp"
                     />
 
@@ -163,14 +165,14 @@
                     />
 
 
-                <EditText
+                <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1.3"
-                    android:gravity="center_vertical"
                     android:background="@null"
                     android:text="@{tianfeng.tianfengbalance}"
-                    android:textColor="#ff333333"
+                    android:gravity="right|center_vertical"
+                    android:textColor="@color/red_e61e16"
                     android:textSize="16sp"
                     />
 
@@ -207,7 +209,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1.3"
-                    android:gravity="center_vertical"
+                    android:gravity="right|center_vertical"
                     android:hint="请输入转账金额"
                     android:text="@={tianfeng.transferAmount}"
                     android:inputType="numberDecimal"
@@ -249,7 +251,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1.3"
-                    android:gravity="center_vertical"
+                    android:gravity="right|center_vertical"
                     android:hint="请输入交易密码"
                     android:text="@={tianfeng.payPassword}"
                     android:inputType="textPassword"
