--- a/app/src/main/res/layout/activity_vip.xml
+++ b/app/src/main/res/layout/activity_vip.xml
@@ -122,26 +122,17 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
+                android:layout_marginTop="3dp"
+                android:layout_marginLeft="-2dp"
                 >
-            
-            <ImageView
-                android:id="@+id/ic_vip_circle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_vip_circle"
-                />
 
             <TextView
                 android:id="@+id/vip_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shape_vip_circle"
-                android:layout_toRightOf="@+id/ic_vip_circle"
-                android:layout_marginLeft="-1dp"
                 android:textSize="@dimen/textsize10"
-                android:paddingRight="@dimen/padding_5"
                 android:textColor="#E94240"
+                android:background="@drawable/ic_vip_circle"
                 />
             </RelativeLayout>
             
