--- a/app/src/main/res/layout/adapter_sure_order.xml
+++ b/app/src/main/res/layout/adapter_sure_order.xml
@@ -210,7 +210,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="@dimen/margin_10"
-                    android:text="￥"
+                    android:text="¥"
                     android:textColor="#ff222222"
                     android:textSize="14sp"
                     android:visibility="gone"
