--- a/app/src/main/res/layout/layout_me_fans.xml
+++ b/app/src/main/res/layout/layout_me_fans.xml
@@ -84,7 +84,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_20"
-                android:src="@drawable/ic_me_shared"
+                android:src="@drawable/ic_me_qrcode"
                 />
 
             <TextView
@@ -111,7 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_20"
-                android:src="@drawable/ic_me_qrcode"/>
+                android:src="@drawable/ic_me_shared"/>
 
             <TextView
                 android:layout_width="wrap_content"
