--- a/app/src/main/res/layout/popup_goods_format.xml
+++ b/app/src/main/res/layout/popup_goods_format.xml
@@ -3,10 +3,18 @@
     xmlns:lzy="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/rl_pop"
     android:background="#33000000">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/ll_format"
+        android:id="@+id/rl_pop"
+        />
+
+
     <LinearLayout
+        android:id="@+id/ll_format"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
