--- a/app/src/main/res/layout/title_layout_search.xml
+++ b/app/src/main/res/layout/title_layout_search.xml
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="7dp"
-            android:text="中秋礼盒"
+            android:text="搜索商品"
             android:textColor="@color/white"
             android:textSize="15sp" />
     </LinearLayout>
