--- a/app/src/main/res/drawable/bottom_bg_3.xml
+++ b/app/src/main/res/drawable/bottom_bg_3.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@mipmap/ic_me_select" android:state_checked="true" />
-    <item android:drawable="@mipmap/ic_me" />
+    <item android:drawable="@mipmap/ic_app_zunxiang_select" android:state_checked="true" />
+    <item android:drawable="@mipmap/ic_app_zunxiang_unselect" />
 </selector>
