--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -50,25 +50,23 @@
         android:layout_height="match_parent"
         android:background="#f2f2f2"
         android:layout_marginTop="60dp"
+        android:descendantFocusability="blocksDescendants"
         >
 
+
+        <WebView
+            android:id="@+id/wv_home"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="-180dp"
+            />
+
+
     <LinearLayout
+        android:id="@+id/ll_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-
-        </LinearLayout>
 
 
         <com.xw.banner.Banner
@@ -84,15 +82,18 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/ic_home_bg"
             >
             
             <View
                 android:layout_width="match_parent"
-                android:layout_height="507dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/ic_home_bg"
+                android:layout_alignBottom="@+id/ll_home_top"
                 />
 
             <LinearLayout
+                android:id="@+id/ll_home_top"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
@@ -178,6 +179,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
+                    android:visibility="gone"
                     android:onClick="@{()->home.onHomeGo()}"
                     >
 
@@ -208,6 +210,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:scaleType="fitCenter"
+                    android:visibility="gone"
                     android:adjustViewBounds="true"
                     app:image="@{homebean.ccq.get(0).flashPic}"
                     android:onClick="@{()->home.ccqEntrance(homebean.ccq.get(0).flashUrl)}"
@@ -220,6 +223,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape_home_title_gridview"
                     android:orientation="vertical"
+                    android:visibility="gone"
                     android:layout_marginTop="10dp"
                     >
 
@@ -381,6 +385,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_marginTop="@dimen/margin_10"
+                    android:visibility="gone"
                     >
 
 
@@ -501,8 +506,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/margin_10"
+                    android:visibility="gone"
                     android:layout_marginBottom="60dp"
                     />
+
 
             </LinearLayout>
 
