--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -168,7 +168,7 @@
 
                     <TextView
                         android:id="@+id/tv_go_scan"
-                        android:layout_width="19dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="@dimen/margin_15"
                         android:onClick="@{()->me.setQrcode()}"
